--- a/crear.html
+++ b/crear.html
@@ -29,6 +29,8 @@
 					<div id="place-holder"> PARA VER LA VISTA PREVIA AÑADA UN EVENTO </div>
 				</div>
 
+				<p id="confirmacion" style="display: none;"> Se ha añadido tu evento correctamente! :)</p>
+
 				<div id="mostrado-final" style="display: none">
 					<div class="mostrado-final">
 						<p class="texto-final">Nombre del evento: </p>
