Actualización index: Info terminada

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="col s6">   
                         <div class="card-image">
                             <img alt="Ejemplo de calendario para mostrar las tareas asignadas por el profesorado" 
-                            src="images/calendario.JPG" width="435" height="330">       
+                            src="images/calendario.JPG" width="435" height="360">       
                         </div>
                     </div>
                     <div class="col s6">   
@@ -119,18 +119,22 @@
                         <div class="card purple darken-2">
                             <div class="card-content white-text">
                                 <blockquote tabindex="0"><i> ULL Ganizate </i>, también ofrece una herramienta para 
-                                    crear eventos propios, tales como tareas, exámenes o recordatorios. Estos eventos
+                                    crear eventos propios, tales como: tareas, exámenes o recordatorios. Estos eventos
                                     se ordenarán de acuerdo a la fecha que se le haya asignado. Además, se dispondrá
-                                    de un apartado para poder ver estos eventos personalizados.
+                                    de un apartado para poder ver estos eventos personalizados y poder eliminarlos.
                                 </b></blockquote>       
                             </div>
                         </div>
                     </div>
-                    <div class="col s6">   
-                        <div class="card-image">
+                    <div class="col s6 center-align">   
+                        <div class="card-image center-align">
                             <img alt="Ejemplo de calendario para mostrar las tareas asignadas por el profesorado" 
-                            src="images/calendario.JPG" width="435" height="330">       
+                            src="images/añadirEvento.JPG" width="200" height="280">       
                         </div>
+                    </div>
+                    <div class="card-image center-align">
+                        <img alt="Ejemplo de calendario para mostrar las tareas asignadas por el profesorado" 
+                        src="images/verEvento.JPG" width="620" height="220">       
                     </div>
                     <div class="col s12">
                         <div class="card white">
@@ -149,18 +153,13 @@
                             <h5></h5>          
                         </div>  
                     </div>
-                    <div class="col s6">   
+                    <div class="col s12">   
                         <div class="card purple darken-2">
                             <div class="card-content white-text">
                                 <blockquote tabindex="0"> Para utilizar los servicios de <i> ULL Ganizate </i>,
-                                    deberás de crearte una iniciar sesión con tu correo 
+                                    deberás de registrarte con tu correo institucional. Una vez inicies sesión 
+                                    podras disfrutar de ésta herramienta. 
                                 </b></blockquote>          
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col s6">   
-                        <div class="card purple darken-2">
-                            <div class="card-content white-text center-align">        
                             </div>
                         </div>
                     </div>
