--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="col s12">   
                         <div class="card purple darken-2">
                             <div class="card-content white-text">
-                                <h5 class="center-align"><b><i> ¿Qué ofrece ULL Ganizate? </i></b></h5>           
+                                <h5 class="center-align" tabindex="0"><b><i> ¿Qué ofrece ULL Ganizate? </i></b></h5>           
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col s6">   
                         <div class="card-image">
-                            <img alt="Ejemplo de calendario para mostrar las tareas asignadas por el profesorado" 
+                            <img tabindex="0" alt="Ejemplo de calendario para mostrar las tareas asignadas por el profesorado" 
                             src="images/calendario.JPG" width="435" height="360">       
                         </div>
                     </div>
@@ -128,12 +128,12 @@
                     </div>
                     <div class="col s6 center-align">   
                         <div class="card-image center-align">
-                            <img alt="Ejemplo de calendario para mostrar las tareas asignadas por el profesorado" 
+                            <img tabindex="0" alt="Interfaz para añadir un nuevo evento. Tiene tres campos: nombre del evento, tipo del evento y fecha" 
                             src="images/añadirEvento.JPG" width="200" height="280">       
                         </div>
                     </div>
                     <div class="card-image center-align">
-                        <img alt="Ejemplo de calendario para mostrar las tareas asignadas por el profesorado" 
+                        <img tabindex="0" alt="Ejemplo de evento agregado por un usuario" 
                         src="images/verEvento.JPG" width="590" height="220">       
                     </div>
                     <div class="col s12">
@@ -144,7 +144,7 @@
                     <div class="col s12">   
                         <div class="card purple darken-2">
                             <div class="card-content white-text">
-                                <h5 class="center-align"><b><i> ¿Cómo funciona ULL Ganizate? </i></b></h5>           
+                                <h5 tabindex="0" class="center-align"><b><i> ¿Cómo funciona ULL Ganizate? </i></b></h5>           
                             </div>
                         </div>
                     </div>
@@ -173,24 +173,24 @@
             <div class="container">
               <div class="row">
                 <div class="col l6 s12">
-                  <h5 class="white-text"> Información de contacto </h5>
-                  <p class="grey-text text-lighten-4"> Contacta con nosotros a través de alguno de estos correos:</p>
-                  <p class="grey-text text-lighten-4"> <b>Borja Guanche:</b>  alu0101205908@ull.edu.es</p>
-                  <p class="grey-text text-lighten-4"> <b>Adrián Hernández:</b>  alu0101235516@ull.edu.es</p>
-                  <p class="grey-text text-lighten-4"> <b>Alberto Ríos:</b>  alu0101235929@ull.edu.es</p>
+                  <h5 class="white-text" tabindex="0"> Información de contacto </h5>
+                  <p class="grey-text text-lighten-4" tabindex="0"> Contacta con nosotros a través de alguno de estos correos:</p>
+                  <p class="grey-text text-lighten-4" tabindex="0"> <b>Borja Guanche:</b>  alu0101205908@ull.edu.es</p>
+                  <p class="grey-text text-lighten-4" tabindex="0"> <b>Adrián Hernández:</b>  alu0101235516@ull.edu.es</p>
+                  <p class="grey-text text-lighten-4" tabindex="0"> <b>Alberto Ríos:</b>  alu0101235929@ull.edu.es</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                   <h5 class="white-text">Links</h5>
                   <ul>
-                    <li><a class="grey-text text-lighten-3" href="./accesibilidad.html">Accesibilidad</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                    <li><a class="grey-text text-lighten-3" href="https://www.ull.es/">Universidad de La Laguna</a></li>
+                    <li><a class="grey-text text-lighten-3" tabindex="0" href="./accesibilidad.html">Accesibilidad</a></li>
+                    <li><a class="grey-text text-lighten-3" tabindex="0" href="#!">GitHub</a></li>
+                    <li><a class="grey-text text-lighten-3" tabindex="0" href="https://www.ull.es/">Universidad de La Laguna</a></li>
                   </ul>
                 </div>
               </div>
             </div>
             <div class="footer-copyright">
-              <div class="container">
+              <div class="container" tabindex="0">
               © 2021 MIT License
               </div>
             </div>
