--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <body >
             <div id="page-title">
-                <p id="titulo">ULL GANIZATE</p>
+                <p id="titulo" tabindex="0">ULL GANIZATE</p>
             </div>
             <div class="container">
                 <div class="row">
