--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   <p class="grey-text text-lighten-4" tabindex="0"> <b>Alberto Ríos:</b>  alu0101235929@ull.edu.es</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                  <h5 class="white-text">Links</h5>
+                  <h5 class="white-text" tabindex="0">Links</h5>
                   <ul>
                     <li><a class="grey-text text-lighten-3" tabindex="0" href="./accesibilidad.html">Accesibilidad</a></li>
                     <li><a class="grey-text text-lighten-3" tabindex="0" href="#!">GitHub</a></li>
