--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -15,7 +15,7 @@
         
         <body>
             <div id="page-title">
-                <p id="titulo" onclick="redirect()">ULL GANIZATE</p>
+                <p tabindex="0" id="titulo" onclick="redirect()">ULL GANIZATE</p>
             </div>
             <div class="container">
                 <div class="row">
@@ -168,18 +168,18 @@
             <div class="container">
               <div class="row">
                 <div class="col l6 s12">
-                  <h5 class="white-text"> Información de contacto </h5>
-                  <p class="grey-text text-lighten-4"> Contacta con nosotros a través de alguno de estos correos:</p>
-                  <p class="grey-text text-lighten-4"> <b>Borja Guanche:</b>  alu0101205908@ull.edu.es</p>
-                  <p class="grey-text text-lighten-4"> <b>Adrián Hernández:</b>  alu0101235516@ull.edu.es</p>
-                  <p class="grey-text text-lighten-4"> <b>Alberto Ríos:</b>  alu0101235929@ull.edu.es</p>
+                  <h5 class="white-text" tabindex="0"> Información de contacto </h5>
+                  <p class="grey-text text-lighten-4" tabindex="0"> Contacta con nosotros a través de alguno de estos correos:</p>
+                  <p class="grey-text text-lighten-4" tabindex="0"> <b>Borja Guanche:</b>  alu0101205908@ull.edu.es</p>
+                  <p class="grey-text text-lighten-4" tabindex="0"> <b>Adrián Hernández:</b>  alu0101235516@ull.edu.es</p>
+                  <p class="grey-text text-lighten-4" tabindex="0"> <b>Alberto Ríos:</b>  alu0101235929@ull.edu.es</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                  <h5 class="white-text">Links</h5>
+                  <h5 class="white-text" tabindex="0">Links</h5>
                   <ul>
-                    <li><a class="grey-text text-lighten-3" href="./index.html">Portada</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                    <li><a class="grey-text text-lighten-3" href="https://www.ull.es/">Universidad de La Laguna</a></li>
+                    <li><a class="grey-text text-lighten-3" tabindex="0"href="./index.html">Portada</a></li>
+                    <li><a class="grey-text text-lighten-3" tabindex="0"href="#!">GitHub</a></li>
+                    <li><a class="grey-text text-lighten-3" tabindex="0" href="https://www.ull.es/">Universidad de La Laguna</a></li>
                   </ul>
                 </div>
               </div>
