--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -185,7 +185,7 @@
               </div>
             </div>
             <div class="footer-copyright">
-              <div class="container">
+              <div class="container" tabindex="0">
               © 2021 MIT License
               </div>
             </div>
