--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -15,7 +15,7 @@
         
         <body>
             <div id="page-title">
-                <p tabindex="0" id="titulo" onclick="redirect()">ULL GANIZATE</p>
+                <p tabindex="0" id="titulo" onclick="redirectHome()">ULL GANIZATE</p>
             </div>
             <div class="container">
                 <div class="row">
