--- a/crear.html
+++ b/crear.html
@@ -14,55 +14,55 @@
 
 	<body>
 		<div id="page-title">
-			<p id="titulo" onclick="redirect()">ULL GANIZATE</p>
+			<p tabindex="0" id="titulo" onclick="redirect()">ULL GANIZATE</p>
 		</div>
 
 		<main>
 			<div id="datos">
 				<div class="container-data">
 					<div class="event-title">
-						<p id="data-title">Vista previa del evento</p>
+						<p tabindex="0" id="data-title">Vista previa del evento</p>
 					</div>
 				</div>
 
 				<div id="place">
-					<div id="place-holder"> PARA VER LA VISTA PREVIA AÑADA UN EVENTO </div>
+					<div tabindex="0" id="place-holder"> PARA VER LA VISTA PREVIA AÑADA UN EVENTO </div>
 				</div>
 
-				<p id="confirmacion" style="display: none;"> Se ha añadido tu evento correctamente! :)</p>
+				<p tabindex="0" id="confirmacion" style="display: none;"> Se ha añadido tu evento correctamente! :)</p>
 
 				<div id="mostrado-final" style="display: none">
 					<div class="mostrado-final">
-						<p class="texto-final">Nombre del evento: </p>
+						<p tabindex="0" class="texto-final">Nombre del evento: </p>
 						<p id="nombreF">nombre_evento</p>
-						<p class="texto-final">Tipo de evento: </p>
+						<p tabindex="0" class="texto-final">Tipo de evento: </p>
 						<p id="tipoF">tipo_evento</p>
-						<p class="texto-final">Fecha del evento: </p>
+						<p tabindex="0" class="texto-final">Fecha del evento: </p>
 						<p id="fechaF">fecha_evento</p>
 					</div>
-					<button id="boton-datos" onclick="setDatos()"> Confirmar </button>
+					<button tabindex="0" id="boton-datos" onclick="setDatos()"> Confirmar </button>
 				</div>
 			</div>
 
 			<div id="registro">
 				<div class="container">
 					<div class="event-title">
-						<p id="event-title">Añadir evento</p>
+						<p tabindex="0" id="event-title">Añadir evento</p>
 					</div>
 					<form>
-						<input type="text" placeholder="Nombre del evento" id="nombre-evento" required>
+						<input tabindex="0" type="text" placeholder="Nombre del evento" id="nombre-evento" required>
 
-						<select id="tipo-de-evento">
+						<select tabindex="0" id="tipo-de-evento">
 							<option selected> Tipo de evento
 							<option > Tarea
 							<option > Examen
 							<option > Recordatorio
 						</select>
 					
-						<input type="date" alt="Seleccione la fecha límite" id="fecha" step="1" min="2021-06-01" max="2025-12-31" value="2021-06-01">
+						<input tabindex="0" type="date" alt="Seleccione la fecha límite" id="fecha" step="1" min="2021-06-01" max="2025-12-31" value="2021-06-01">
 					</form>
 
-					<button id="boton-evento" onclick="añadir()"> Añadir </button>
+					<button tabindex="0" id="boton-evento" onclick="añadir()"> Añadir </button>
 					<button id="boton-evento-2" onclick="change()"> Añadir </button>
 				</div>
 			</div>
