--- a/ver.html
+++ b/ver.html
@@ -15,26 +15,26 @@
 
     <body>
       <div id="page-title">
-        <p id="titulo" onclick="redirect()">ULL GANIZATE</p>
+        <p tabindex="0" id="titulo" onclick="redirect()">ULL GANIZATE</p>
       </div>
         <div class="container" >
             <div class="row">
               <div class="col s12">   
-                  <h5 class="center-align" tabindex="0"><b> EVENTOS PENDIENTES </b></h5>
+                  <h5 tabindex="0" class="center-align" tabindex="0"><b> EVENTOS PENDIENTES </b></h5>
               </div>
             </div>
         </div>
         <div class="container">
             <div class="center-align" class="row" id="botonMostrar" tabindex="0">
                 <div class="col s1">
-                    <a class="purple darken-2 btn-large" onclick="getDatos()" id="botonMostrar"> Mostrar eventos</a>
+                    <a tabindex="0" class="purple darken-2 btn-large" onclick="getDatos()" id="botonMostrar"> Mostrar eventos</a>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col s12">
-                    <div id="informacion" class="center-align"></div>
+                    <div tabindex="0" id="informacion" class="center-align"></div>
                 </div>
             </div>
         </div>
@@ -73,18 +73,18 @@
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text"> Información de contacto </h5>
-              <p class="grey-text text-lighten-4"> Contacta con nosotros a través de alguno de estos correos:</p>
-              <p class="grey-text text-lighten-4"> <b>Borja Guanche:</b>  alu0101205908@ull.edu.es</p>
-              <p class="grey-text text-lighten-4"> <b>Adrián Hernández:</b>  alu0101235516@ull.edu.es</p>
-              <p class="grey-text text-lighten-4"> <b>Alberto Ríos:</b>  alu0101235929@ull.edu.es</p>
+              <h5 tabindex="0" class="white-text"> Información de contacto </h5>
+              <p tabindex="0" class="grey-text text-lighten-4"> Contacta con nosotros a través de alguno de estos correos:</p>
+              <p tabindex="0" class="grey-text text-lighten-4"> <b>Borja Guanche:</b>  alu0101205908@ull.edu.es</p>
+              <p tabindex="0" class="grey-text text-lighten-4"> <b>Adrián Hernández:</b>  alu0101235516@ull.edu.es</p>
+              <p tabindex="0" class="grey-text text-lighten-4"> <b>Alberto Ríos:</b>  alu0101235929@ull.edu.es</p>
             </div>
             <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
+              <h5 tabindex="0" class="white-text">Links</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="./accesibilidad.html">Accesibilidad</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                <li><a class="grey-text text-lighten-3" href="https://www.ull.es/">Universidad de La Laguna</a></li>
+                <li><a tabindex="0" class="grey-text text-lighten-3" href="./accesibilidad.html">Accesibilidad</a></li>
+                <li><a tabindex="0" class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+                <li><a tabindex="0" class="grey-text text-lighten-3" href="https://www.ull.es/">Universidad de La Laguna</a></li>
               </ul>
             </div>
           </div>
