--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
   <body>
     <main>
       <div class="background">
-        <div class="title-page">
+        <div tabindex="0" class="title-page">
           <h2 class="title-princ" onclick="redirectHome() tabindex="0"">ULL GANIZATE</h2>
           <p id="eslogan-text" tabindex="0"><b>Ullganizate es una aplicación destinada a la organización y gestión de tu tiempo, aqui podrás acceder a tu calendario, ver tus últimas actividades o incluso añadir tareas. Descúbrelo!</b></p>
           <center>
