--- a/login.html
+++ b/login.html
@@ -28,14 +28,14 @@
 
   <body>
     <main>
-      <div class="background">
+      <div class="background" tabindex="0">
         <div tabindex="0" class="title-page">
           <h2 class="title-princ" onclick="redirectHome() tabindex="0"">ULL GANIZATE</h2>
           <p id="eslogan-text" tabindex="0"><b>Ullganizate es una aplicación destinada a la organización y gestión de tu tiempo, aqui podrás acceder a tu calendario, ver tus últimas actividades o incluso añadir tareas. Descúbrelo!</b></p>
           <center>
             <img tabindex="0" alt="ícono del GitHub de ULL Ganizate"class="image" src="./images/signo-de-github.png" width="50px" height="50px" onclick="RedirectGH()"/>
           </center>
-          <footer class="footer">
+          <footer class="footer" tabindex="0">
             <p tabindex="0" id="eslogan1"> ¿No estás registrado?  <button class="btn-Login" id="Login" onclick="Cambio2()">Sign Up</button></p>
             <p tabindex="0" id="eslogan2" style="display: none;"> ¿Ya estás registrado?  <button class="btn-Login" id="Login" onclick="Cambio1()">Log In</button></p>
           </footer>
