--- a/ver.html
+++ b/ver.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="center-align" class="row" id="botonMostrar" tabindex="0">
+            <div class="center-align" class="row" id="botonMostrar">
                 <div class="col s1">
                     <a tabindex="0" class="purple darken-2 btn-large" onclick="getDatos()" id="botonMostrar"> Mostrar eventos</a>
                 </div>
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="col s12">
-                    <div tabindex="0" id="informacion" class="center-align"></div>
+                    <div id="informacion" class="center-align"></div>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="footer-copyright">
-          <div class="container">
+          <div class="container" tabindex="0">
           © 2021 MIT License
           </div>
         </div>
